# chariot

./: .clangd  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: docs-pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  cli.md  overrides.md
docs/src/config/: directive.md  main.md  syntax.md
docs/src/config/recipe/: common.md  execution_env.md  main.md  source.md
src/: cache.rs  config.c  config.rs  container.c  container.h  lib.c  lib.h  main.c  main.rs  pipeline.rs  recipe.h  recipe.rs  rootfs.rs  util.rs
src/config/: lexer.rs  mod.rs  parser.rs
src/container/: mod.rs  runtime.rs
src/runtime/: child.rs  mod.rs
vscode-extension/: chariot.tmLanguage.json  package-lock.json  package.json
