[package]
name = "chariot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
colog = "1.3.0"
log = "0.4.27"
nix = { version = "0.29.0", features = [
    "fs",
    "user",
    "sched",
    "mount",
    "signal",
    "poll",
] }
thiserror = "2.0.12"
toml = "0.8.20"
walkdir = "2.5.0"
