[package]
name = "chariot"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
nix = { version = "0.29.0", features = [
    "fs",
    "user",
    "sched",
    "mount",
    "signal",
    "poll",
] }
log = "0.4.27"
toml = "0.8.20"
walkdir = "2.5.0"
which = "7.0.3"
clap = { version = "4.5.37", features = ["derive"] }
fs2 = "0.4.3"
clap_complete = "4.5.54"
glob = "0.3.2"
owo-colors = "4.2.3"
bytesize = "2.3.1"
chrono = "0.4.42"
blake3 = "1.8.3"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["alloc"] }
